2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Artwork__c/Temporary_Artwork__c.object-meta.xml
<CustomObject>
    <label>Temporary Artwork</label>
    <nameField>
        <displayFormat>F-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temporary Artworks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>