2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Artwork__c/fields/Artwork_Title__c.field-meta.xml
<CustomField>
    <fullName>Artwork_Title__c</fullName>
    <label>Artwork Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>