2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Artwork__c/fields/Artwork_Type__c.field-meta.xml
<CustomField>
    <fullName>Artwork_Type__c</fullName>
    <label>Artwork Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unique Art</fullName>
                <default>true</default>
                <label>Unique Art</label>
            </value>
            <value>
                <fullName>Edition Master</fullName>
            </value>
            <value>
                <fullName>Edition Member</fullName>
            </value>
            <value>
                <fullName>Public Art</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>