2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Artwork__c/fields/Declared_Value__c.field-meta.xml
<CustomField>
    <fullName>Declared_Value__c</fullName>
    <description>Declared Value of Artworks</description>
    <inlineHelpText>Declared Value of Artworks</inlineHelpText>
    <label>Declared Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>