2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Artwork__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Temporary Artworks</relationshipLabel>
    <relationshipName>Temporary_Artworks</relationshipName>
    <type>Lookup</type>
</CustomField>