2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Artwork__c/fields/VM_Weight_Set__c.field-meta.xml
<CustomField>
    <fullName>VM_Weight_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VM_Weight_Set</label>
    <type>Checkbox</type>
</CustomField>